--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,9 @@
 
 * {
     font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-body {
-    width: 100%;
+    line-height: 1.6;
 }
 
 /*////////////Login.js styling/////////////*/
@@ -22,7 +18,7 @@ body {
     box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
 }
 
-.cover input{
+.cover .login-dec{
     border: none;
     background-color: rgb(229, 226, 226);
     border-radius: 0.25em;
@@ -49,7 +45,7 @@ body {
 
 header{
     display: flex;
-    max-width: 1200px;
+    max-width: 1400px;
     min-width: 450px;
     margin: 70px auto;
 }
@@ -60,7 +56,6 @@ header h3{
 
 header .btn{
     margin-left: auto;
-    display: inline-block;
     background: #000;
     color: #fff;
     border: none;
@@ -81,90 +76,46 @@ h1{
     transform: scale(1.05);
 }
 
-.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    overflow: auto;
-    min-height: 300px;
-    border: 1px solid steelblue;
-    padding: 30px;
-    border-radius: 5px;
-}
-
-.inStock{
-    border-left: 5px solid blue;
-}
-
-.item {
-    background: #f4f4f4;
-    margin: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
-}
-
 /*////Table styling//////*/
-
-.table {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 table {
-    border: 2px solid forestgreen;
-    width: 1000px;
-    height: auto;
-    line-height: 50px;
-    margin-bottom: 30px;
+    border-collapse: collapse;
+    margin: auto;
+    font-size: 0.9em;
+    width: 95%;
+    min-width: 600px;
 }
 
-th {
-    border-bottom: 1px solid black;
-}
-    
-td {
-    text-align: center;
+table thead tr{
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+    height: 40px;
 }
 
+tr, td{
+    padding: 12px 15px;
+}
+
+tbody tr{
+    border-bottom: 1px solid #dddddd;
+}
+
+table tbody tr:nth-of-type(even){
+    background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type{
+    border-bottom: 2px solid #009879;
+}
 
 /*////////ADD ITEM.JS STYLING///////////*/
 .add-form {
-    margin: auto auto;
-    border-radius: 10px;
-    margin-bottom: 40px;
-    width: 350px;
-    height: 400px;
-}
-
-.form-control {
-    margin: 40px auto;
-
-}
-
-.form-control label {
-    display: block;
-}
-
-.form-control input {
-    width: 100%;
-    height: 35px;
-    font-size: 17px;
-}
-
-.form-control-check{
-    width: 300px;
     margin: auto;
-    margin: 10px auto;
-}
-
-.form-control-check input{
-    height: 20px;
+    margin-bottom: 30px;
 }
 
 form .btn{
-    display: block;
-    width: 100%;
     background: #000;
     color: #fff;
     border: none;
@@ -192,5 +143,41 @@ form .btns{
 
 form .cancelbtn{
     background-color: red;
+}
+
+
+
+
+
+
+.welcome{
+    height: 692px;
+    width: 100%;
+    text-align: center;
+    padding-top: 100px;
+    color: white;
+    overflow: hidden;
+    background: #C04848;  /* fallback for old browsers */
+    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8)), url("https://ik.imagekit.io/ikmedia/blog/hero-image.jpeg");  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8)), url("https://ik.imagekit.io/ikmedia/blog/hero-image.jpeg"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.welcome button{
+    background: #000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: inherit;
 }
 
