--- a/src/Components/style.module.css
+++ b/src/Components/style.module.css
@@ -12,18 +12,21 @@
     color: #842029;
     background-color: #f8d7da;
     border-color: #f5c2c7;
+    animation: Slide_Down 1s ease-out;
 }
 
 .success {
     color: #0f5132;
     background-color: #d1e7dd;
     border-color: #badbcc;
+    animation: Slide_Down 1s ease-in;
 }
 
 .warning {
     color: #664d03;
     background-color: #fff3cd;
     border-color: #ffecb5;
+    animation: Slide_Down 1s ease-out;
 }
 .primary {
     color: #084298;
@@ -57,4 +60,13 @@
   /* When moving the mouse over the close button */
 .closebtn:hover {
     color: black;
+}
+
+@keyframes Slide_Down{
+    0%{
+        transform: translateY(-50px);
+    }
+    100%{
+        transform: translateY(0);
+    }
 }
