--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    line-height: 1.6;
 }
 
 /*////////////Login.js styling/////////////*/
@@ -47,7 +46,6 @@ header{
     display: flex;
     justify-content: space-between;
     width: 92%;
-    min-width: 300px;
     margin: 3.5% auto;
 }
 
@@ -77,7 +75,7 @@ h1{
     text-align: center;
 }
 
-.btn:hover{
+header .btn:hover{
     transform: scale(1.05);
 }
 
@@ -87,7 +85,6 @@ table {
     margin: auto;
     font-size: 0.9em;
     width: 95%;
-    min-width: 600px;
 }
 
 table thead tr{
@@ -96,6 +93,10 @@ table thead tr{
     text-align: left;
     font-weight: bold;
     height: 40px;
+}
+
+.item-th{
+    padding-left: 10px;
 }
 
 /* table thead tr th:last-of-type{
@@ -108,6 +109,7 @@ tr, td{
 
 tbody tr{
     border-bottom: 1px solid #dddddd;
+    background-color: white;
 }
 
 table tbody tr:nth-of-type(even){
@@ -123,6 +125,41 @@ table tbody tr:last-of-type{
 table .actions-in{
     margin-right: 10px;
 }
+
+@media screen and (max-width: 630px){
+    header{
+        min-width: 100%;
+        display: grid;
+        grid-template-columns: 60% auto;
+        margin: 0;
+        margin-bottom: 15px;
+        font-size: .7rem;
+        border: 1px solid red;
+    }
+
+    .inner-header{
+        border: 1px solid red;
+        display: grid;
+        margin: 0;
+        height: auto;
+    }
+
+    .inner-header h3{
+        margin-top: 0;
+        margin-left: 30px;
+    }
+
+    header .btn{
+        width: 100px;
+        font-size: 10px;
+        margin: 0 15px;
+    }
+
+    table{
+        max-width: 100%;
+    }
+}
+
 
 /*////////ADD ITEM/ EDIT ITEM.JS STYLING///////////*/
 .add-form {
@@ -159,37 +196,66 @@ hr.solid{
 }
 
 .form-control{
-    margin: 12px 0;
+    display: flex;
+    margin: 20px auto;
+    width: 90%;
+    justify-content: space-between;
+}
+
+form .edit-item{
+    margin-top: 15px;
 }
 
 .form-control input{
     padding: 7px 0 7px 15px;
     border: none;
     border-radius: 15px;
-    width: 75%;
+    width: 74%;
 }
 
 .form-control input:focus{
-    outline-color: rgb(32, 177, 225);
+    outline-color: #bbb;
+}
+
+form .form-control-out{
+    margin-top: 20px;
+}
+
+form .form-control-date{
+    padding: 7px 0 7px 15px;
+    border-radius: 20px;
+    border: none;
 }
 
 form .btn{
-    background: whitesmoke;
-    color: #000;
-    border: none;
+    background-color: black;
+    color: white;
+    border: 2px solid #bbb;
     padding: 10px 20px;
-    margin: 5px;
+    margin-top: 1px;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
     font-size: 15px;
     font-family: inherit;
+    transition: 1s;
+}
+
+form .btn:hover{
+    transform: scale(1.1);
+    background-color: white;
+    color: black;
 }
 
 form .cancelBtn{
+    margin-left: 20px;
     background-color: red;
 }
 
+form .cancelBtn:hover{
+    border: 1px solid red;
+    color: red;
+}
 
 @keyframes Slide_Down{
     0%{
