--- a/src/index.css
+++ b/src/index.css
@@ -126,39 +126,6 @@ table .actions-in{
     margin-right: 10px;
 }
 
-@media screen and (max-width: 630px){
-    header{
-        min-width: 100%;
-        display: grid;
-        grid-template-columns: 60% auto;
-        margin: 0;
-        margin-bottom: 15px;
-        font-size: .7rem;
-        border: 1px solid red;
-    }
-
-    .inner-header{
-        border: 1px solid red;
-        display: grid;
-        margin: 0;
-        height: auto;
-    }
-
-    .inner-header h3{
-        margin-top: 0;
-        margin-left: 30px;
-    }
-
-    header .btn{
-        width: 100px;
-        font-size: 10px;
-        margin: 0 15px;
-    }
-
-    table{
-        max-width: 100%;
-    }
-}
 
 
 /*////////ADD ITEM/ EDIT ITEM.JS STYLING///////////*/
@@ -299,5 +266,66 @@ form .cancelBtn:hover{
     text-decoration: none;
     font-size: 15px;
     font-family: inherit;
+}
+
+
+
+
+@media screen and (max-width: 630px){
+    header{
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        margin: 0;
+        margin-bottom: 15px;
+        font-size: 0.9rem;
+        z-index: 0;
+    }
+
+    .inner-header{
+        margin: auto;
+    }
+
+    header .btn{
+        border-radius: 0%;
+    }
+
+    table{
+        width: 40%;
+        max-width: 30%;
+    }
+
+    .add-form {
+        position: absolute;
+        height: 100%;
+        background-color: white;
+        overflow: hidden;
+        width: 100%;
+        animation: Slide_Down 1s ease-out;
+        margin: 0;
+    }
+
+    .form{
+        background-color: black;
+        color: white;
+        opacity: 0.9;
+        text-align: center;
+        width: 90%;
+        height: 70%;
+        margin: 3% auto;
+        border-radius: 10px;
+        box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+    }
+
+    .form-control input{
+        width: 70%;
+    }
+
+    .form-control label{
+        margin-top: 10px;
+        font-size: 0.8rem;
+    }
 }
 
