--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,36 @@
 /*////////////Login.js styling/////////////*/
 
 .cover{
+    display: flex;
+    align-items: center;
     margin: auto;
+    margin-top: 120px;
     background-color: white;
-    width: 30em;
-    position: relative;
+    width: 35em;
     border-radius: 1em;
     box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+    height: 450px;
+    background-color: black;
+    color: white;
+}
+
+.login_form{
+    height: 80%;
+    text-align: center;
+    width: 90%;
+    margin: 3% auto;
+    border-radius: 10px;
+}
+
+.login_form h1{
+    margin-bottom: 50px;
+}
+
+.login_form .form-control{
+    display: flex;
+    margin: 30px auto;
+    width: 90%;
+    justify-content: space-between;
 }
 
 .cover .login-dec{
@@ -24,22 +48,48 @@
     text-align: center;
     padding: 0.7em;
     width: 80%;
+    margin: auto;
+}
+
+.login_form label{
+    margin-right: 10px;
 }
 
 .cover input:focus{
-    outline-color: rgb(32, 177, 225);
+    outline: 1px solid black;
 }
 
 .login-btn{
-    width: 40%;
-    background-color: rgb(32, 177, 225);
+    background-color: black;
+    color: white;
+    border: 2px solid #bbb;
+    padding: 10px 20px;
+    margin-top: 1px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: inherit;
     transition: 1s;
-    border-radius: 0.25em;
+    width: 40%;
 }
 
 .login-btn:hover{
-    transform: scale(1.25);
+    transform: scale(1.1);
+    background-color: white;
+    color: black;
+    border: 1px solid black;
 }
+
+.login_form_end{
+    text-align: center;
+}
+
+.login_form a{
+    color: white;
+}
+
 /*///////////Inventory.js header styling////////////*/
 
 header{
@@ -146,7 +196,7 @@ table .actions-in{
     animation: Slide_Down 1s ease-out;
 }
 
-hr.solid{
+.form hr.solid{
     border-top: 3px solid #bbb;
     border-radius: 60px;
     width: 90%;
@@ -174,32 +224,32 @@ hr.solid{
     justify-content: space-between;
 }
 
-form .edit-item{
+.form .edit-item{
     margin-top: 15px;
 }
 
-.form-control input{
+.form .form-control input{
     padding: 7px 0 7px 15px;
     border: none;
     border-radius: 15px;
     width: 74%;
 }
 
-.form-control input:focus{
+.form .form-control input:focus{
     outline-color: #bbb;
 }
 
-form .form-control-out{
+.form .form-control-out{
     margin-top: 20px;
 }
 
-form .form-control-date{
+.form .form-control-date{
     padding: 7px 0 7px 15px;
     border-radius: 20px;
     border: none;
 }
 
-form .btn{
+.form .btn{
     background-color: black;
     color: white;
     border: 2px solid #bbb;
@@ -213,18 +263,18 @@ form .btn{
     transition: 1s;
 }
 
-form .btn:hover{
+.form .btn:hover{
     transform: scale(1.1);
     background-color: white;
     color: black;
 }
 
-form .cancelBtn{
+.form .cancelBtn{
     margin-left: 20px;
     background-color: red;
 }
 
-form .cancelBtn:hover{
+.form .cancelBtn:hover{
     border: 1px solid red;
     color: red;
 }
