--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
 
+nav{
+    background-color: #071C3B;
+    width: 100%;
+    height: 70px;
+}
+
+nav img{
+    width: 40px;
+    height: 40px;
+}
+
+nav .brand{
+    display: flex;
+    width: 15%;
+    float: left;
+    align-items: center;
+    margin-left: 8%;
+    height: 100%;
+}
+
+nav .nav-right{
+    width: 40%;
+    display: flex;
+    justify-content: space-evenly;
+    float: right;
+    margin-top: 20px;
+}
+
+nav a{
+    text-decoration: none;
+    color: white;
+}
+
+/*////////welcome page styling///////////*/
+.welcome{
+    width: 100%;
+    text-align: center;
+    color: pink;
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.welcome button{
+    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8));
+    color: pink;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 15px;
+    font-family: inherit;
+}
+
 /*////////////Login.js styling/////////////*/
 
 .cover{
     display: flex;
-    align-items: center;
-    margin: auto;
-    margin-top: 120px;
-    width: 35em;
-    border-radius: 1em;
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
-    height: 450px;
-    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8));
-    color: pink;
+    width: 100%;
 }
 
 .login_form{
-    height: 80%;
+    width: 35%;
+    border-radius: 1em;
+    border: 2px solid #bbb;
+    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+    color: pink;
     text-align: center;
-    width: 90%;
-    margin: 3% auto;
+    margin: 7% auto;
 }
 
 .login_form h1{
-    margin-bottom: 50px;
+    margin: 50px auto;
 }
 
 .login_form .form-control{
@@ -39,7 +87,7 @@
     justify-content: space-between;
 }
 
-.cover .login-dec{
+.login-dec{
     border: none;
     background-color: rgb(229, 226, 226);
     border-radius: 7px;
@@ -53,7 +101,7 @@
     margin-right: 10px;
 }
 
-.cover input:focus{
+.login_form .login-dec:focus{
     outline: 1.6px solid #C04848;
 }
 
@@ -80,8 +128,8 @@
     border: 2px solid #C04848;
 }
 
-.login_form_end{
-    text-align: center;
+.form-end{
+    margin-bottom: 70px;
 }
 
 .login_form a{
@@ -91,6 +139,7 @@
 
 .login_form a:hover{
     color: black;
+    text-decoration: none;
 }
 
 /*///////////Inventory.js header styling////////////*/
@@ -100,6 +149,7 @@ header{
     justify-content: space-between;
     width: 92%;
     margin: 3.5% auto;
+    background-image: inherit;
 }
 
 .inner-header{
@@ -150,10 +200,17 @@ table {
     margin-top: 30px;
     font-size: 0.9em;
     width: 95%;
+    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+    margin-bottom: 30px;
+    background-color: white;
+}
+
+.table-h1{
+    text-align: center;
 }
 
 table thead tr{
-    background-color: #f3f3f3;
+    /* background-color: #f3f3f3; */
     color: black;
     text-align: left;
     font-weight: bold;
@@ -180,6 +237,17 @@ span.divider{
 
 .name-th{
     padding-left: 10px;
+}
+
+.arrived{
+    color: green;
+}
+.lowStock{
+    color: orange;
+}
+
+.noStock{
+    color: red;
 }
 
 /* .SS-th, table tbody tr td:nth-of-type(4){
@@ -233,7 +301,7 @@ tbody tr td:first-of-type{
 
 tbody tr{
     border-bottom: 1px solid #dddddd;
-    background-color: white;
+    /* background-color: white; */
 }
 
 table tbody tr:nth-of-type(even){
@@ -241,7 +309,7 @@ table tbody tr:nth-of-type(even){
 }
 
 table tbody tr:last-of-type{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #071C3B;
 }
 
 /*/////darkgray  a //////*/
@@ -255,11 +323,8 @@ table .actions-in{
 /*////////ADD ITEM/ EDIT ITEM.JS STYLING///////////*/
 .add-form {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 85%;
-    background-color: white;
+    bottom: 1;
+    background-image: linear-gradient(90deg, rgb(116, 57, 219, 0.8), rgb(198, 111, 188, 0.8) 48%, rgb(247, 148, 77, 0.8));
     overflow: hidden;
     width: 100%;
     animation: Slide_Down 1s ease-out;
@@ -281,7 +346,7 @@ table .actions-in{
     text-align: center;
     width: 30%;
     height: 500px;
-    margin: 3% auto;
+    margin: 2% auto;
     border-radius: 10px;
     box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
 }
@@ -290,7 +355,7 @@ table .actions-in{
     padding-top: 20px;
 }
 
-.form-control{
+.add-form .form-control{
     display: flex;
     margin: 20px auto;
     width: 90%;
@@ -367,42 +432,22 @@ table .actions-in{
 
 
 
-/*////////welcome page styling///////////*/
-.welcome{
-    height: 692px;
-    width: 100%;
-    text-align: center;
-    padding-top: 100px;
-    color: pink;
-    overflow: hidden;
-    background: #C04848;  /* fallback for old browsers */
-    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8)), url("../public/landingpage.png");  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8)), url("../public/landingpage.png"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
 
-.welcome button{
-    background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8));
-    color: pink;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 15px;
-    font-family: inherit;
-}
 
 
 
 
 @media screen and (max-width: 630px){
+    .welcome{
+        font-size: 10px;
+    }
+    
+    .welcome button{
+        padding: 7px 14px;
+        font-size: 10px;
+    }
+    
+
     header{
         width: 100%;
         min-width: 100%;
@@ -437,6 +482,7 @@ table .actions-in{
     table td{
         margin: 0;
         padding: 0;
+        padding-bottom: 45px;
     }
 
     table th{
@@ -456,6 +502,11 @@ table .actions-in{
 
     table .actions-in{
         margin-left: 0;
+    }
+
+    
+    .login_form{
+        width: 90%;
     }
 
     .add-form {
@@ -489,16 +540,3 @@ table .actions-in{
         font-size: 0.8rem;
     }
 }
-
-.arrived{
-    color: green;
-}
-.lowStock{
-    color: orange;
-}
-
-.noStock{
-    color: red;
-}
-
-
