--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+body{
+    background: linear-gradient(90deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.7) 48%, rgb(247, 148, 77, 0.5)), url("./bg2.jpg") no-repeat right fixed;
+    background-size: contain;
+    opacity: 0.6;
+}
+
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -5,7 +11,7 @@
 }
 
 nav{
-    background-color: #071C3B;
+    background-color: rgb(7, 28, 59, 0.87);
     width: 100%;
     height: 70px;
 }
@@ -43,8 +49,6 @@ nav a{
     text-align: center;
     color: pink;
     overflow: hidden;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .welcome button{
@@ -324,7 +328,7 @@ table .actions-in{
 .add-form {
     position: absolute;
     bottom: 1;
-    background-image: linear-gradient(90deg, rgb(116, 57, 219, 0.8), rgb(198, 111, 188, 0.8) 48%, rgb(247, 148, 77, 0.8));
+    background-image: linear-gradient(90deg, rgb(116, 57, 219, 0.8), rgb(198, 111, 188, 0.7) 48%, rgb(247, 148, 77, 0.5));
     overflow: hidden;
     width: 100%;
     animation: Slide_Down 1s ease-out;
