--- a/src/desmond.css
+++ b/src/desmond.css
@@ -77,16 +77,29 @@ nav a{
 }
 
 .login_form{
-    /* background: linear-gradient(90deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.7) 48%, rgb(247, 148, 77, 0.5)); */
+    background: linear-gradient(90deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.65) 48%, rgb(247, 148, 77, 0.6));
+    /* background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84)); */
+    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
     width: 35%;
     border-radius: 1em;
     border: 2px solid #bbb;
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
     color: black;
     text-align: center;
     margin: 7% 100px;
-    /* margin: 7% auto; */
 }
+
+/* .login_form{
+    background: linear-gradient(-45deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.7) 48%, rgb(247, 148, 77, 0.5));
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 400px;
+    width: 35%;
+    margin: 7% 100px;
+    border-radius: 1em;
+    border: 2px solid #bbb;
+    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+    text-align: center;
+} */
 
 .login_form h1{
     margin: 50px auto;
@@ -120,7 +133,7 @@ nav a{
 .login-btn{
     background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84));
     color: white;
-    border: 1px solid #bbb;
+    border: none;
     padding: 10px 20px;
     margin-top: 1px;
     margin-bottom: 20px;
@@ -133,11 +146,31 @@ nav a{
     width: 40%;
 }
 
+/* .login-btn{
+    background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84));
+	background-size: 400% 400%;
+	animation: gradient 7s ease infinite;
+    width: 40%;
+    color: white;
+    border: 1px solid #bbb;
+    padding: 10px 20px;
+    margin-top: 1px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: inherit;
+    transition: 1s;
+} */
+
 .login-btn:hover{
+    /* border: 1px solid rgb(213, 85, 84);
+    animation: gradientB infinite;
+    animation-direction: normal ; */
     transform: scale(1.1);
-    background-color: white;
-    color: #C04848;
-    border: 2px solid #C04848;
+    background: rgb(213, 85, 84);
+    border: none;
 }
 
 .form-end{
@@ -442,6 +475,27 @@ table .actions-in{
     }
 }
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes gradientB {
+	from{
+        background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84));
+    }
+
+    to{
+        background: rgb(213, 85, 84);
+    }
+}
 
 
 
@@ -449,12 +503,26 @@ table .actions-in{
 
 
 
+
+
+
+
+@media screen and (max-width: 1240px){
+    .login_form{
+        background: linear-gradient(90deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.8) 48%, rgb(247, 148, 77, 0.75));
+        width: 45%;
+    }
+
+    .login_form label{
+        margin-top: 10px;
+    }
+}
 
 @media screen and (max-width: 930px){
     body{
-        background: no-repeat center fixed;
-        background-image: linear-gradient(90deg, rgb(116, 57, 219, 0.8), rgb(198, 111, 188, 0.8) 48%, rgb(247, 148, 77, 0.8)), url("./bg2.jpg");
-        background-size: contain;
+        background: linear-gradient(45deg, rgb(116, 57, 219), rgb(198, 111, 188) 48%, rgb(247, 148, 77));
+        background-size: 400% 400%;
+        animation: gradient 3s ease infinite;
     }
     .welcome{
         width: 100%;
@@ -472,16 +540,35 @@ table .actions-in{
         height: 500px;
     }
 
+    .login_form h1{
+        margin: 80px auto 50px auto;
+    }
+
     .login_form{
-        width: 90%;
-        height: 80%;
+        width: 95%;
+        height: 100%;
         margin: 10% auto;
-        background: white;
+        background: inherit;
+        box-shadow: 0 0 0 rgb(156, 156, 156);
+    }
+
+    .login_form label{
+        margin-top: 5px;
+        margin-right: 5px;
     }
 
     .login_form a{
         color: rgb(213, 85, 84);
         text-decoration: underline;
+    }
+
+    .login_form .form-control{
+        width: 95%;
+    }
+
+    .login-btn{
+        margin-left: 60px;
+        padding: 8px 16px;
     }
 }
 
@@ -494,7 +581,19 @@ table .actions-in{
         padding: 7px 14px;
         font-size: 10px;
     }
-    
+
+    .login_form label{
+        margin-right: 0px;
+    }
+
+    .login-dec{
+        width: 100%;
+        height: 10px;
+    }
+    .form-end{
+        margin-top: 5px;
+        margin-bottom: 0;
+    }
 
     header{
         width: 100%;
@@ -513,11 +612,6 @@ table .actions-in{
 
     header .btn{
         border-radius: 0%;
-    }
-
-    .login-dec{
-        width: 100%;
-        height: 10px;
     }
 
     table{
@@ -586,5 +680,20 @@ table .actions-in{
     .form-control label{
         margin-top: 10px;
         font-size: 0.8rem;
+    }
+}
+
+@media screen and (max-width: 290px){
+    .login_form{
+        width: 100%;
+        border: 0;
+    }
+
+    .login_form label{
+        margin-right: 3px;
+    }
+
+    .login-btn{
+        width: 50%;
     }
 }
