--- a/src/desmond.css
+++ b/src/desmond.css
@@ -1,6 +1,5 @@
 body{
-    background: no-repeat right fixed;
-    background-image: linear-gradient(90deg, rgb(220, 220, 220), rgb(220, 220, 220, 0.5) 49%, rgb(220, 220, 220, 0.5)), url("./bg2.jpg");
+    background: linear-gradient(90deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.7) 48%, rgb(247, 148, 77, 0.5)), url("./bg2.jpg") no-repeat right fixed;
     background-size: contain;
 }
 
@@ -45,16 +44,10 @@ nav a{
 
 /*////////welcome page styling///////////*/
 .welcome{
-    width: 40%;
-    font-size: x-large;
+    width: 100%;
     text-align: center;
-    /* color: pink; */
-    color: black;
+    color: pink;
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20%;
 }
 
 .welcome button{
@@ -77,29 +70,14 @@ nav a{
 }
 
 .login_form{
-    background: linear-gradient(90deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.65) 48%, rgb(247, 148, 77, 0.6));
-    /* background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84)); */
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
     width: 35%;
     border-radius: 1em;
     border: 2px solid #bbb;
-    color: black;
+    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+    color: pink;
     text-align: center;
-    margin: 7% 100px;
+    margin: 7% auto;
 }
-
-/* .login_form{
-    background: linear-gradient(-45deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.7) 48%, rgb(247, 148, 77, 0.5));
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 400px;
-    width: 35%;
-    margin: 7% 100px;
-    border-radius: 1em;
-    border: 2px solid #bbb;
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
-    text-align: center;
-} */
 
 .login_form h1{
     margin: 50px auto;
@@ -114,7 +92,7 @@ nav a{
 
 .login-dec{
     border: none;
-    background-color: #dcdcdc;
+    background-color: rgb(229, 226, 226);
     border-radius: 7px;
     text-align: center;
     padding: 0.7em;
@@ -127,13 +105,13 @@ nav a{
 }
 
 .login_form .login-dec:focus{
-    outline: 1.6px solid rgb(213, 85, 84, 0.7);
+    outline: 1.6px solid #C04848;
 }
 
 .login-btn{
-    background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84));
+    background-color: rgb(72,0,72,0.4);
     color: white;
-    border: none;
+    border: 2px solid #bbb;
     padding: 10px 20px;
     margin-top: 1px;
     margin-bottom: 20px;
@@ -146,31 +124,11 @@ nav a{
     width: 40%;
 }
 
-/* .login-btn{
-    background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84));
-	background-size: 400% 400%;
-	animation: gradient 7s ease infinite;
-    width: 40%;
-    color: white;
-    border: 1px solid #bbb;
-    padding: 10px 20px;
-    margin-top: 1px;
-    margin-bottom: 20px;
-    border-radius: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 15px;
-    font-family: inherit;
-    transition: 1s;
-} */
-
 .login-btn:hover{
-    /* border: 1px solid rgb(213, 85, 84);
-    animation: gradientB infinite;
-    animation-direction: normal ; */
     transform: scale(1.1);
-    background: rgb(213, 85, 84);
-    border: none;
+    background-color: white;
+    color: #C04848;
+    border: 2px solid #C04848;
 }
 
 .form-end{
@@ -179,13 +137,12 @@ nav a{
 
 .login_form a{
     margin-left: 2px;
-    color: black;
-    text-decoration: none;
+    color: white;
 }
 
 .login_form a:hover{
-    text-decoration: underline;
-    color: rgb(213, 85, 84);
+    color: black;
+    text-decoration: none;
 }
 
 /*///////////Inventory.js header styling////////////*/
@@ -475,27 +432,6 @@ table .actions-in{
     }
 }
 
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-@keyframes gradientB {
-	from{
-        background: linear-gradient(90deg, rgb(244, 216, 81), rgb(213, 85, 84));
-    }
-
-    to{
-        background: rgb(213, 85, 84);
-    }
-}
 
 
 
@@ -503,74 +439,6 @@ table .actions-in{
 
 
 
-
-
-
-
-@media screen and (max-width: 1240px){
-    .login_form{
-        background: linear-gradient(90deg, rgb(116, 57, 219), rgb(198, 111, 188, 0.8) 48%, rgb(247, 148, 77, 0.75));
-        width: 45%;
-    }
-
-    .login_form label{
-        margin-top: 10px;
-    }
-}
-
-@media screen and (max-width: 930px){
-    body{
-        background: linear-gradient(45deg, rgb(116, 57, 219), rgb(198, 111, 188) 48%, rgb(247, 148, 77));
-        background-size: 400% 400%;
-        animation: gradient 3s ease infinite;
-    }
-    .welcome{
-        width: 100%;
-        font-size: 18px;
-        margin-top: 10%;
-    }
-
-    .welcome button{
-        padding: 8.5px 17px;
-        font-size: 12px;
-    }
-
-    .cover{
-        width: 100%;
-        height: 500px;
-    }
-
-    .login_form h1{
-        margin: 80px auto 50px auto;
-    }
-
-    .login_form{
-        width: 95%;
-        height: 100%;
-        margin: 10% auto;
-        background: inherit;
-        box-shadow: 0 0 0 rgb(156, 156, 156);
-    }
-
-    .login_form label{
-        margin-top: 5px;
-        margin-right: 5px;
-    }
-
-    .login_form a{
-        color: rgb(213, 85, 84);
-        text-decoration: underline;
-    }
-
-    .login_form .form-control{
-        width: 95%;
-    }
-
-    .login-btn{
-        margin-left: 60px;
-        padding: 8px 16px;
-    }
-}
 
 @media screen and (max-width: 630px){
     .welcome{
@@ -581,19 +449,7 @@ table .actions-in{
         padding: 7px 14px;
         font-size: 10px;
     }
-
-    .login_form label{
-        margin-right: 0px;
-    }
-
-    .login-dec{
-        width: 100%;
-        height: 10px;
-    }
-    .form-end{
-        margin-top: 5px;
-        margin-bottom: 0;
-    }
+    
 
     header{
         width: 100%;
@@ -651,6 +507,11 @@ table .actions-in{
         margin-left: 0;
     }
 
+    
+    .login_form{
+        width: 90%;
+    }
+
     .add-form {
         position: absolute;
         height: 100%;
@@ -680,20 +541,5 @@ table .actions-in{
     .form-control label{
         margin-top: 10px;
         font-size: 0.8rem;
-    }
-}
-
-@media screen and (max-width: 290px){
-    .login_form{
-        width: 100%;
-        border: 0;
-    }
-
-    .login_form label{
-        margin-right: 3px;
-    }
-
-    .login-btn{
-        width: 50%;
     }
 }
